--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -11,3 +11,8 @@ body{
 #main .breadcrumbs{
 	margin-top: 20px;
 }
+#navigation #brand{
+	padding-right: 10px;
+	padding-left: 0;
+	font-size: 18px;
+}
