--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,7 @@ li{list-style:none;}
 .main .main-sidebar .side-section .side-nav{margin:0;padding:0;}.main .main-sidebar .side-section .side-nav li{margin-bottom:10px;}
 .main .main-sidebar .side-section .side-nav li a{display:block;background-color:#0a85cf;text-align:center;color:#FFF;padding:10px;font-size:14px;-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px;}
 .main .main-sidebar .side-section .side-nav li a:hover{background:#000000;text-decoration:none;}
-.main .main-content{float:left;width:80%;padding:20px;}
+.main .main-content{float:left;width:80%;padding-top:20px;padding-left:40px;}
 .main-index{padding:20px 0;}
 .footer{background:#FFF;margin-top:20px;padding:20px 0;text-align:center;font-size:14px;color:#7a7a7a;border-top:1px solid #dddddd;}
 .wrapper{position:relative;height:auto;_height:100%;min-height:100%;}.wrapper .main{padding-bottom:120px;}
