--- a/assets/css/widget.less
+++ b/assets/css/widget.less
@@ -134,3 +134,14 @@
 .text-input{
 	width:200px;
 }
+
+.article{
+	#title{
+		font-size:36px;
+		text-align:center;
+	}
+	p{
+		text-indent: 2em;
+		line-height: 2em;
+	}
+}
