--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -397,8 +397,8 @@ li{
 					font-size:14px;
 					.borderRadius(@mini);
 				}
-				li a:hover{
-					background:@black;
+				li.active a,li a:hover{
+					background:@blue_dark;
 					text-decoration:none;
 				}
 			}
@@ -454,6 +454,55 @@ li{
 	span{
 
 	}
-} 
+}
+.link-tags{
+	a{
+		position:relative;
+		display:inline-block;
+		padding:@small @large;
+		margin-right:@normal;
+		margin-bottom:@normal;
+		background:@gray;
+		color:@font_black;		
+	}
+	.action-group{
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: #FFF;
+		text-align: center;
+		.action{
+			margin:0 @mini;
+			padding:@small;
+		}
+	}
+	a:hover{
+		.action-group{
+			display:block;
+		}
+	}
+}
+.action-group{
+	display:none;
+	position:absolute;
+	z-index:99;
+	.action{
+		background:black;
+		color:#FFF;
+		font-size:12px;
+		padding:@mini;
+	}
+}
+.action-bottom{
+	margin-top:@large*2;
+	text-align:right;
+	padding:@medium;
+	.btn,.input-group{
+		float:right;
+		margin:0 @normal;
+	}
+}
+
  
 
