--- a/assets/css/widget.less
+++ b/assets/css/widget.less
@@ -21,6 +21,9 @@
 		padding:@small 0;
 		border-bottom:1px solid @border_grey;
 	}
+	.content-body{
+		min-height:200px;
+	}
 }
 .text-list{
 	padding:0;
@@ -144,4 +147,87 @@
 		text-indent: 2em;
 		line-height: 2em;
 	}
+}
+.btn {
+	display: inline-block;
+	padding: 6px @medium;
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	.borderRadius(4px);
+}
+.btn:hover{
+	text-decoration:none;
+}
+.btn-success {
+	color: #fff;
+	background-color: #5cb85c;
+	border-color: #4cae4c;
+}
+.btn-success:hover,.btn-success:active{
+	color:#fff;
+	background-color:#449d44;
+	border-color:#398439;
+}
+.btn-default {
+	color: #333;
+	background-color: #fff;
+	border-color: #ccc;
+}
+
+.form-control {
+	display: block;
+	width: 100%;
+	height: 34px;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+	-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.input-group {
+	position: relative;
+	display: table;
+	border-collapse: separate;
+	.form-control{
+		display:table-cell;
+		position: relative;
+		z-index: 2;
+		float: left;
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+	.input-group-btn {
+		display: table-cell;
+		position: relative;
+		font-size: 0;
+		white-space: nowrap;
+		vertical-align: middle;
+		.btn{
+			border-top-left-radius: 0;
+			border-bottom-left-radius: 0;
+			margin-left:-1px;
+		}
+	}	
 }
